--- a/ocr/Dockerfile
+++ b/ocr/Dockerfile
@@ -1,16 +1,15 @@
 FROM python:3.9-slim
 
-WORKDIR /app
+WORKDIR /ocr
 
 RUN apt-get update && apt-get install -y python3-opencv libleptonica-dev tesseract-ocr libtesseract-dev tesseract-ocr-rus
 
+COPY requirements.txt requirements.txt
+
 RUN pip install -U pip
 
+RUN pip install -r requirements.txt
+
+ENV FLASK_APP=server
 COPY . .
-
-RUN pip install -r requirements
-
-ENV FLASK_APP=ocr
-
 EXPOSE 5001
-CMD ["flask run --port 5001"]
